--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,21 @@
 * {
     font-family: "Poppins", sans-serif;
 }
+
+input[type="text"],input[type="email"],input[type="password"] {
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+    width: 100%;
+    line-height: 35px;
+}
+
+button[type="submit"] {
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    /*background-color: #000;*/
+    color: #fff;
+    width: 100%;
+    @apply bg-primary;
+}
