Add photos by link or from files.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
     font-family: "Poppins", sans-serif;
 }
 
-input[type="text"],input[type="email"],input[type="password"] {
+textarea, input {
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 10px;
